--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
+    "lottie-web": "^5.7.12",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
+    "react-lottie-player": "^1.3.3",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "7.31.0",
